<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/Theme.Design.Light.NoActionBar"
    tools:context=".LoginActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/login_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_marginTop="32dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/icons8_user_96" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:text="Welcome to GoParty!"
        android:textSize="24dp" />

    <TextView
        android:textSize="16sp"
        android:textStyle="bold"
        android:id="@+id/login_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/username"
        android:textColor="@color/black"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/login_uName_textfield"
        android:layout_width="256dp"
        android:layout_height="64dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:textColor="@color/black"
        android:inputType="textPersonName"
        android:hint="@string/login_hint_username"
        android:gravity="center"
        android:layout_gravity="center"
        android:background="@color/light_grey"/>
    <TextView
        android:textStyle="bold"
        android:textSize="16sp"
        android:id="@+id/login_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/black"
        android:text="@string/password"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/login_psw_textfield"
        android:layout_width="256dp"
        android:layout_height="64dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/login_hint_password"
        android:layout_gravity="center"
        android:background="@color/light_grey"
        android:gravity="center"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/login_login"
        android:layout_marginTop="32dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:backgroundTint="@color/light_grey"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_signIn"
        android:layout_gravity="center"
        android:textSize="12sp"
        android:layout_marginTop="16dp"
        android:textStyle="italic"
        android:textColor="@color/black"/>


</LinearLayout>