<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Register1Activity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/register1_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/icons8_add_user_male_96" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Please chose a username and password"
        android:layout_gravity="center"
        android:gravity="center"/>

    <TextView
        android:id="@+id/register1_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register1_email" />

    <EditText
        android:id="@+id/register1_email_Input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/register1_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/username" />

    <EditText
        android:id="@+id/register1_username_Input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/register1_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/password" />

    <EditText
        android:id="@+id/register1_password_Input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/register1_passwordRepeat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register1_repeat_password" />

    <EditText
        android:id="@+id/register1_passwordRepeat_Input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        />

    <Button
        android:id="@+id/register1_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Register" />


</LinearLayout>