<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_row="10"
    android:layout_column="10"
    android:columnCount="10"
    android:orientation="vertical"

    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/profile_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <ImageView
        android:id="@+id/profile_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/profile_toolbar"
        android:layout_alignParentTop="false"
        android:layout_alignParentEnd="false"
        android:layout_alignParentBottom="false"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        app:srcCompat="@drawable/icons8_user_96" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_below="@id/profile_photo"
        android:paddingLeft="50px"
        android:paddingTop="100px"
        android:text="First Name: "
        android:textStyle="bold" />

    <EditText
        android:id="@+id/first_name"
        android:layout_width="256dp"
        android:layout_height="50dp"

        android:layout_below="@id/profile_photo"
        android:layout_gravity="center"
        android:layout_marginLeft="100px"
        android:layout_marginTop="50px"
        android:layout_toRightOf="@id/textView3"
        android:background="@color/light_grey"
        android:gravity="center"
        android:hint="@string/first_name"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/lastlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_below="@id/first_name"
        android:paddingLeft="50px"
        android:paddingTop="100px"
        android:text="Last Name: "
        android:textStyle="bold" />

    <EditText
        android:id="@+id/Last_name"
        android:layout_width="256dp"
        android:layout_height="50dp"
        android:layout_below="@id/first_name"
        android:layout_gravity="center"
        android:layout_marginLeft="100px"
        android:layout_marginTop="50px"
        android:layout_toRightOf="@id/textView3"
        android:background="@color/light_grey"
        android:gravity="center"
        android:hint="@string/last_name"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/userlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_below="@id/Last_name"
        android:paddingLeft="50px"
        android:paddingTop="100px"
        android:text="@string/username"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/Username"
        android:layout_width="256dp"
        android:layout_height="50dp"
        android:layout_below="@id/Last_name"
        android:layout_gravity="center"
        android:layout_marginLeft="100px"
        android:layout_marginTop="50px"
        android:layout_toRightOf="@id/textView3"
        android:background="@color/light_grey"
        android:gravity="center"
        android:hint="@string/login_hint_username"
        android:inputType="textPersonName" />


    <TextView
        android:id="@+id/emaillabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_below="@id/Username"
        android:paddingLeft="50px"
        android:paddingTop="100px"
        android:text="E-mail: "
        android:textStyle="bold" />

    <EditText
        android:id="@+id/email"
        android:layout_width="256dp"
        android:layout_height="50dp"
        android:layout_below="@id/Username"
        android:layout_gravity="center"
        android:layout_marginLeft="100px"
        android:layout_marginTop="50px"
        android:layout_toRightOf="@id/textView3"
        android:background="@color/light_grey"
        android:gravity="center"
        android:hint="@string/Email"
        android:inputType="textPersonName" />


    <TextView
        android:id="@+id/DOBlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:paddingLeft="50px"
        android:paddingTop="100px"
        android:text="Date Of Birth: "
        android:textStyle="bold" />

    <EditText
        android:id="@+id/DOB"
        android:layout_width="256dp"
        android:layout_height="50dp"
        android:layout_below="@id/email"
        android:layout_gravity="center"
        android:layout_marginLeft="100px"
        android:layout_marginTop="50px"
        android:layout_toRightOf="@id/textView3"
        android:background="@color/light_grey"
        android:gravity="center"
        android:hint="@string/DOB"
        android:inputType="textPersonName" />

</RelativeLayout>
