<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentRight="false"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/main_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/main_toolbar"
        android:layout_centerHorizontal="true"
        android:text="Go Party!"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/dancingIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="50dp"
        app:srcCompat="@drawable/icons8_dancing_96" />

    <ImageView
        android:id="@+id/profileIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textView"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="100dp"
        app:srcCompat="@drawable/icons8_user_96" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dancingIcon"
        android:layout_marginLeft="75dp"
        android:text="@string/main_all_events_label" />

    <TextView
        android:id="@+id/profileLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/profileIcon"
        android:layout_marginLeft="75dp"
        android:text="@string/main_profile_label" />

    <ImageView
        android:id="@+id/main_map_icon"
        android:layout_width="90dp"
        android:layout_height="97dp"
        android:layout_below="@id/title"
        android:layout_alignParentRight="true"
        android:layout_marginTop="50dp"
        android:layout_marginRight="50dp"
        app:srcCompat="@drawable/icons8_map_marker_96" />

    <TextView
        android:id="@+id/MapLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_map_icon"
        android:layout_alignParentRight="true"
        android:layout_marginRight="75dp"
        android:text="@string/main_map_label" />

    <ImageView
        android:id="@+id/main_my_events_icon"
        android:layout_width="99dp"
        android:layout_height="94dp"
        android:layout_below="@id/MapLabel"
        android:layout_alignParentRight="true"
        android:layout_marginTop="100dp"
        android:layout_marginRight="50dp"
        app:srcCompat="@drawable/icons8_favorite_96" />

    <TextView
        android:id="@+id/main_my_events_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/main_my_events_icon"
        android:layout_alignParentRight="true"
        android:layout_marginRight="60dp"
        android:text="@string/main_my_events_label" />


</RelativeLayout>